#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# --------------------------------------------------------------------
# Prep

AC_PREREQ(2.59)
AC_INIT(hello, 1.3, knaka@ayutaya.com)
AC_CONFIG_SRCDIR([hello.c])
AC_CONFIG_HEADER([config.h])

MYLIB_MAJOR_VERSION=1
MYLIB_MINOR_VERSION=3
MYLIB_MICRO_VERSION=5

# --------------------------------------------------------------------
# Checks for programs.

AC_PROG_CC

# --------------------------------------------------------------------
# Checks for libraries.
# FIXME: Replace `main' with a function in `-lmylib':

# AC_CHECK_LIB([mylib], [myfunc])

# --------------------------------------------------------------------
# Checks for header files.

AC_CHECK_HEADER(stdio.h)

# --------------------------------------------------------------------
# Checks for typedefs, structures, and compiler characteristics.

# --------------------------------------------------------------------
# Checks for library functions.

# --------------------------------------------------------------------
# Others

MYLIB_MICRO_VERSION_SUFFIX=

MYLIB_VERSION=$MYLIB_MAJOR_VERSION
MYLIB_VERSION=$MYLIB_VERSION.$MYLIB_MINOR_VERSION
MYLIB_VERSION=$MYLIB_VERSION.$MYLIB_MICRO_VERSION
MYLIB_VERSION=$MYLIB_VERSION$MYLIB_MICRO_VERSION_SUFFIX
AC_SUBST(MYLIB_VERSION)

MYLIB_VERSION_INFO=`expr $MYLIB_MAJOR_VERSION + $MYLIB_MINOR_VERSION`
MYLIB_VERSION_INFO=$MYLIB_VERSION_INFO:$MYLIB_MICRO_VERSION
MYLIB_VERSION_INFO=$MYLIB_VERSION_INFO:$MYLIB_MINOR_VERSION
AC_SUBST(MYLIB_VERSION_INFO)

AC_ARG_WITH([hoge], AC_HELP_STRING([--with-hoge], [HOGE]),
 [with_hoge=yes],
 [with_hoge=no] )

if test "$with_hoge" != "no"
then
  hoge_value="HOGE"
else
  hoge_value="None"
fi
AC_SUBST(hoge_value)

AC_ARG_WITH([fuga], AC_HELP_STRING([--with-fuga], [FUGA]))
AC_SUBST(with_fuga)

AC_ARG_WITH([foodir], AC_HELP_STRING([--foodir=path], [FOO]),
 [foodir=$withval],
 [foodir=/tmp/] )
AC_SUBST(foodir)

AC_ARG_ENABLE([feature], AC_HELP_STRING([--enable-feature], [FEATURE]))
AM_CONDITIONAL(FEATURE_ENABLED, test x$enable_feature = xyes)

AC_ARG_WITH([hogedir], AC_HELP_STRING([--with-hogedir=path], [HOGEDIR]),
 [hogedir=$withval],
 [hogedir=/usr/share/hoge] )
AC_SUBST(hogedir)

# --------------------------------------------------------------------
# Automake

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)
AM_PROG_LIBTOOL
AM_PATH_PYTHON

PYTHON_INCLUDES=
if test "$PYTHON_VERSION" != ""
then
  if test -r $prefix/include/python$PYTHON_VERSION/Python.h
  then
    PYTHON_INCLUDES='$(prefix)/include/python$(PYTHON_VERSION)'
  elif test -r /usr/include/python$PYTHON_VERSION/Python.h
  then
    PYTHON_INCLUDES=/usr/include/python$PYTHON_VERSION
  else
    echo Could not find python$PYTHON_VERSION/Python.h
  fi
fi
AC_SUBST(PYTHON_INCLUDES)

# --------------------------------------------------------------------
# Output

AC_CONFIG_FILES([
 Makefile
 sub_0/Makefile
 python/Makefile
 sub_1/Makefile
])
AC_OUTPUT
